--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 <head>
 
-  <title>Longkang Li's Homepage</title>
+  <title>Loka Li's Homepage</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="description" content="Longkang Li is a PhD student in machine learning at MBZUAI.">
-  <meta name="author" content="Longkang Li" />
+  <meta name="description" content="Loka Li is a PhD student in machine learning at MBZUAI.">
+  <meta name="author" content="Loka Li" />
 
   <link rel="stylesheet" href="w3.css">
 
@@ -36,15 +36,15 @@
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
   <div class="w3-container w3-display-container w3-padding-16">
-    <h4><b>LONGKANG</b></h4>
+    <h4><b>LOKA LI</b></h4>
   </div>
   <div class="w3-padding-64 w3-text-light-grey w3-large" style="font-weight:bold">
     <a href="#home" class="w3-bar-item w3-button">Home</a>
     <a href="#news" class="w3-bar-item w3-button">News</a>
     <a href="#publications" class="w3-bar-item w3-button">Research</a>
-    <a href="#experience" class="w3-bar-item w3-button">Experience</a>
+    <a href="#service" class="w3-bar-item w3-button">Services</a>
     <a href="#education" class="w3-bar-item w3-button">Education</a>
-    <a href="#service" class="w3-bar-item w3-button">Service</a>
+    <a href="#experience" class="w3-bar-item w3-button">Experience</a>
     <!-- <a href="#talks" class="w3-bar-item w3-button">Teaching</a> -->
     <a href="#more" class="w3-bar-item w3-button">Contact</a>
   </div>
@@ -52,7 +52,7 @@
 
 <!-- Top menu on small screens -->
 <header class="w3-bar w3-top w3-hide-large w3-black w3-xlarge">
-  <div class="w3-bar-item w3-padding-24">LONGKANG</div>
+  <div class="w3-bar-item w3-padding-24">LOKA LI</div>
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding-24 w3-right"  style="font-stretch: extra-expanded;" onclick="w3_open()"><b>≡</b></a>
   </div>
 </header>
@@ -69,7 +69,7 @@
 <!-- The Home Section -->
     <div class="w3-container w3-center w3-padding-32" id="home">
       <img style="width: 80%;max-width: 400px" alt="profile photo" src="imgs/loka3.jpg"> 
-      <h3><b>Longkang Li</b></h3>
+      <h3><b>Loka Li</b></h3>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
           Hello, World! I am a Ph.D. student in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), where I am fortunate to be advised by Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/">Kun Zhang</a>. I am affiliated to the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>). My research interest lies at the intersection of machine learning and causality.
           <!-- <br><br>   -->
@@ -87,6 +87,7 @@
 <!-- The News Section -->
 <div class="w3-container w3-light-grey w3-padding-32" id="news">
   <h2>News</h2>
+    <!-- <p><li> Feb.2024: One paper about LLM self-correction is available at arXiv!</li></p> -->
     <p><li> Jan.2024: One paper about federated causal discovery was accepted by ICLR 2024!</li></p>
     <p><li> Dec.2023: One paper about imitation learning was accepted by AAAI 2024!</li></p>
 
@@ -110,13 +111,22 @@
     </p> -->
 
     <ul>
+
+      <!-- <p>
+        <li> <a href="">Confidence Matters: Revisiting Intrinsic Self-Correction Capabilities of Large Language Models</a>
+        <br>
+        <strong>Loka Li*</strong>, Guangyi Chen*, Yusheng Su, Zhenhao Chen, Yixuan Zhang, Eric Xing, Kun Zhang.
+        <br>
+        <em>arXiv, 2024.</em> 
+      </p> -->
+
       <p>
         <li> <a href="https://openreview.net/forum?id=m7tJxajC3G">Federated Causal Discovery from Heterogeneous Data</a>
         <br>
-        <strong>Longkang Li</strong>, Ignavier Ng, Gongxu Luo, Biwei Huang, Guangyi Chen, Tongliang Liu, Bin Gu, Kun Zhang.
+        <strong>Loka Li</strong>, Ignavier Ng, Gongxu Luo, Biwei Huang, Guangyi Chen, Tongliang Liu, Bin Gu, Kun Zhang.
         <br>
         <em>International Conference on Learning Representations (ICLR), 2024.</em> 
-        </p>
+      </p>
 
       <p>
         <li> <a href="https://arxiv.org/abs/2210.17178">Learning to Optimize Permutation Flow Shop Scheduling via Graph-based Imitation Learning</a>
@@ -170,6 +180,32 @@
     </p>
   </div>
 
+  <!-- The Service Section -->
+  <div class="w3-container w3-light-grey w3-padding-32" id="service"> 
+    <h2>Services</h2>
+    - Serving as a reviewer for journals and conferences, including: 
+    <ul>
+      <p><li> International Conference on Learning Representations (ICLR).</li></p>
+      <p><li> IEEE Transactions on Neural Networks and Learning Systems (TNNLS).</li></p>
+      <p><li> Neural Networks (NN).</li></p>
+    </ul>
+
+    - Serving as a teaching assistant for the courses, including:
+    <ul>
+      <p><li> 2023/2024 Spring: ML802-Advanced Machine Learning. (Instructor: Prof. Tongliang Liu.)</li></p>
+      <p><li> 2023/2024 Fall: ML803-Advanced Probabilistic and Statistical Inference. (Instructor: Prof. Kun Zhang.)</li></p>
+    </ul>
+  </div> 
+
+  <!-- The Education Section -->
+  <div class="w3-container w3-padding-32" id="education">
+      <h2>Education</h2>
+          <p><li> Aug.2022 - Present: Ph.D. in <em>Machine Learning</em>. Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>).</li></p>
+          <p><li> Aug.2018 - Aug.2020: M.Sc. in <em>Computer Science</em>. The University of Hong Kong (<a href="https://www.hku.hk">HKU</a>). </li></p> 
+          <p><li> Aug.2014 - Jun.2018: B.Eng. in <em>Software Engineering</em>. Sun Yat-sen University (<a href="https://www.sysu.edu.cn/sysuen/">SYSU</a>). </li></p>
+    </div>
+
+  
   <!-- The Experiences Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="experience">
     <h2>Experience</h2>
@@ -190,64 +226,21 @@
       </li></p> 
   </div> 
 
-  <!-- The Education Section -->
-  <div class="w3-container w3-padding-32" id="education">
-    <h2>Education</h2>
-        <p><li> Aug.2022 - Present: Ph.D. in <em>Machine Learning</em>. Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>).</li></p>
-        <p><li> Aug.2018 - Aug.2020: M.Sc. in <em>Computer Science</em>. The University of Hong Kong (<a href="https://www.hku.hk">HKU</a>). </li></p> 
-        <p><li> Aug.2014 - Jun.2018: B.Eng. in <em>Software Engineering</em>. Sun Yat-sen University (<a href="https://www.sysu.edu.cn/sysuen/">SYSU</a>). </li></p>
-  </div>
-
-  <!-- The Talks Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="service"> 
-    <h2>Service</h2>
-    Serving as a reviewer for journals and conferences, including: 
-    <ul>
-      <p><li> International Conference on Learning Representations (ICLR).</li></p>
-      <p><li> IEEE Transactions on Neural Networks and Learning Systems (TNNLS).</li></p>
-      <p><li> Neural Networks (NN).</li></p>
-    </ul>
-
-    Serving as a teaching assistant for the courses, including:
-    <ul>
-      <p><li> 2023/2024 Spring: ML802-Advanced Machine Learning. (Instructor: Prof. Tongliang Liu.)</li></p>
-      <p><li> 2023/2024 Fall: ML803-Advanced Probabilistic and Statistical Inference. (Instructor: Prof. Kun Zhang.)</li></p>
-    </ul>
-  </div> 
-
-  <!-- The Teaching Section -->
-  <!-- <div class="w3-container w3-padding-32" id="talks"> 
-    <h2>Teaching</h2>
-      <p><li> 2023/2024 Spring: TA for ML802-Advanced Machine Learning. (Instructor: Prof. Tongliang Liu.)</li></p>
-      <p><li> 2023/2024 Fall: TA for ML803-Advanced Probabilistic and Statistical Inference. (Instructor: Prof. Kun Zhang.)</li></p>
-  </div> -->
 
   <!-- The More Section -->
   <div class="w3-container w3-padding-32" id="more">
     <h2>Contact</h2>
-    <!-- <p>My chinese name is 李隆康. I am a huge fan of <a href="https://en.wikipedia.org/wiki/Kung_Fu_Panda">Kung Fu Panda</a>. Last but not least, I would like to express my gratitude to the unconditional love from my family, as well as the trust and help from my supervisors and friends. Stay hungry, stay foolish! Modesty, Optimism, Gratitude and Persistence!</p> -->
-    <p>Email: Longkang.Li@mbzuai.ac.ae</p>
-    <p>Location: Room 11, ML Department, 2nd Floor, 1B Block, MBZUAI, Abu Dhabi, UAE.</p>
+    <p><li> Email: Longkang.Li@mbzuai.ac.ae </li></p>
+    <p><li> Location: Room 11, ML Department, 2nd Floor, 1B Block, MBZUAI, Abu Dhabi, UAE.</li></p>
     
     <br>
     <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=269&t=tt&d=WqNAECGeOap9rapsFKcIAmtV22D4reDnZzctz9NQrVQ&co=81bdd6&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
   </div> 
-  <!-- Pandas are the national treasure of my motherland, and I guess I am the treasure of my family! :)  -->
-
-  <!-- The Services Section -->
-  <!-- <div class="w3-container w3-light-grey w3-padding-32" id="service">
-    <h2>Services</h2>
-      <p><li> Area Chair of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p>
-      <p><li> Senior Program Committee Members of <a href="https://ijcai-21.org/">IJCAI 2021</a>, <a href="https://www.ijcai20.org/">IJCAI 2020</a> and <a href="https://www.ijcai19.org/program-committee.html">IJCAI 2019</a>.</p>
-      <p><li> Journal Reviewers of <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34">IEEE T-PAMI</a>, <a href="https://www.springer.com/journal/11263">IJCV</a>, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">IEEE T-IP</a>, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385">IEEE T-NNLS</a>, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046">IEEE T-MM</a>, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=69">IEEE T-KDE</a>, etc.</p>
-      <p><li> Program Committee Members of ICCV 2021, AAAI 2021, ICLR 2021, NeurIPS 2020, ICML 2020, ECCV 2020, CVPR 2020, ICLR 2020, AAAI 2020, ICCV 2019, CVPR 2019, ICLR 2019, AAAI 2019, IJCAI 2018, AAAI 2018, NeurIPS 2018, etc.</p>
-  </div> -->
-
 
 
   <div class="w3-light-grey w3-center w3-padding-24">
-    Welcome to Longkang's website, adapted from <a style="color: #040404" href="https://github.com/YunheWang/HomePage">HERE</a>. <br>
-    Copyright © 2024 Longkang Li. All Rights Reserved.
+    Welcome to Loka's website, adapted from <a style="color: #040404" href="https://github.com/YunheWang/HomePage">HERE</a>. <br>
+    Copyright © 2024 Loka Li. All Rights Reserved.
     <!-- Welcome to use this website's source code <a href="https://github.com/YunheWang/HomePage">source code</a>, just add a link back to here. <a href="https://www.wangyunhe.site/">&#10025;</a></br> -->
 
   <!-- Default Statcounter code for Yunhe Wang's Homepage
