--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         </p>
         <p class="w3-center">
           <a style="color:#e77007" href="https://scholar.google.com/citations?user=PT5AMzgAAAAJ&hl=zh-CN"><strong>Google Scholar</strong></a> &nbsp|&nbsp
-          <a style="color:#e77007" href="https://www.linkedin.com/in/longkang-li-546385245/"><strong>LinkedIn</strong></a> &nbsp|&nbsp
-          <a style="color:#e77007" href="https://github.com/longkangli"><strong>Github</strong></a> &nbsp|&nbsp
+          <a style="color:#e77007" href="https://www.linkedin.com/in/loka-li-546385245/"><strong>LinkedIn</strong></a> &nbsp|&nbsp
+          <a style="color:#e77007" href="https://github.com/lokali"><strong>Github</strong></a> &nbsp|&nbsp
           <!-- <a style="color:#e77007" href="https://dblp.org/pid/272/4405.html"><strong>DBLP</strong></a>  -->
           <a style="color:#e77007" href="#more"><strong>Email</strong></a>
         </p>
