--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
       <img style="width: 80%;max-width: 400px" alt="profile photo" src="imgs/loka3.jpg"> 
       <h3><b>Loka Li</b></h3>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          Hello, World! I am a Ph.D. student in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), where I am fortunate to be advised by Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/">Kun Zhang</a>. I am affiliated to the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>). My research interest lies at the intersection of machine learning and causality.
-          <!-- <br><br>   -->
+          Hello, World! I am a second-year Ph.D. student in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), where I am fortunate to be advised by Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/">Kun Zhang</a>. I am a member of the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>), led by MBZUAI president Prof. Eric Xing and center director Prof. Kun Zhang. My research interest lies at the intersection of machine learning and causality.
         </p>
         <p class="w3-center">
           <a style="color:#e77007" href="https://scholar.google.com/citations?user=PT5AMzgAAAAJ&hl=zh-CN"><strong>Google Scholar</strong></a> &nbsp|&nbsp
@@ -112,16 +111,24 @@
 
     <ul>
 
-      <!-- <p>
-        <li> <a href="">Confidence Matters: Revisiting Intrinsic Self-Correction Capabilities of Large Language Models</a>
+      <p>
+        <li> <a href="https://arxiv.org/abs/2402.12563">Confidence Matters: Revisiting Intrinsic Self-Correction Capabilities of Large Language Models</a>
         <br>
         <strong>Loka Li*</strong>, Guangyi Chen*, Yusheng Su, Zhenhao Chen, Yixuan Zhang, Eric Xing, Kun Zhang.
         <br>
-        <em>arXiv, 2024.</em> 
-      </p> -->
+        <em>Preprint.</em> 
+      </p>
 
       <p>
-        <li> <a href="https://openreview.net/forum?id=m7tJxajC3G">Federated Causal Discovery from Heterogeneous Data</a>
+      <li> <a href="https://openreview.net/forum?id=jE6VXUhxq9">On Causal Discovery in the Presence of Deterministic Relations</a>
+      <br>
+      <strong>Loka Li</strong>, Hanin Al Ghothani, Biwei Huang, Guangyi Chen, Jiji Zhang, Shahar Harel, Kun Zhang.
+      <br>
+      <em>Preprint.</em> 
+      </p>
+
+      <p>
+        <li> <a href="https://arxiv.org/abs/2402.13241">Federated Causal Discovery from Heterogeneous Data</a>
         <br>
         <strong>Loka Li</strong>, Ignavier Ng, Gongxu Luo, Biwei Huang, Guangyi Chen, Tongliang Liu, Bin Gu, Kun Zhang.
         <br>
@@ -131,7 +138,7 @@
       <p>
         <li> <a href="https://arxiv.org/abs/2210.17178">Learning to Optimize Permutation Flow Shop Scheduling via Graph-based Imitation Learning</a>
         <br>
-        <strong>Longkang Li</strong>, Siyuan Liang, Zihao Zhu, Chris Ding, Hongyuan Zha, Baoyuan Wu.
+        <strong>Loka Li</strong>, Siyuan Liang, Zihao Zhu, Chris Ding, Hongyuan Zha, Baoyuan Wu.
         <br>
         <em>AAAI Conference on Artificial Intelligence (AAAI), 2024.</em> 
       </p>
@@ -152,13 +159,13 @@
       <em>Computers and Industrial Engineering</em> 2022. 
       </p> -->
 
-      <p>
+      <!-- <p>
       <li> <a href="https://arxiv.org/abs/2209.07790">A Large-scale Multiple-objective Method for Black-box Attack against Object Detection</a>
       <br>
       Siyuan Liang, <strong>Longkang Li</strong>, Yanbo Fan, Xiaojun Jia, Jingzhi Li, Baoyuan Wu, Xiaochun Cao.
       <br>
       <em>European Conference on Computer Vision (ECCV), 2022.</em> 
-      </p>
+      </p> -->
 
       <!-- <p>
       <li><a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548416">Stealing Knowledge of Black-box Object Detectors</a>
@@ -168,13 +175,13 @@
       <em>ACM MM</em> 2022.
       </p> -->
 
-      <p>
+      <!-- <p>
       <li><a href="https://arxiv.org/abs/2012.03816">Invisible Backdoor Attack with Sample-specific Triggers</a>  
       <br>
       Yuezun Li, Yiming Li, Baoyuan Wu, <strong>Longkang Li</strong>, Ran He, Siwei Lyu.
       <br>
       <em>International Conference on Computer Vision (ICCV), 2021.</em> 
-      </p>
+      </p> -->
     </ul>
 
     </p>
