--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <p>
         <li> <a href="https://arxiv.org/abs/2402.12563">Confidence Matters: Revisiting Intrinsic Self-Correction Capabilities of Large Language Models</a>
         <br>
-        <strong>Loka Li*</strong>, Guangyi Chen*, Yusheng Su, Zhenhao Chen, Yixuan Zhang, Eric Xing, Kun Zhang.
+        <strong>Loka Li*</strong>, Zhenhao Chen*, Guangyi Chen*, Yixuan Zhang, Yusheng Su, Eric Xing, Kun Zhang.
         <br>
         <em>Preprint.</em> 
       </p>
@@ -192,6 +192,8 @@
     <h2>Services</h2>
     - Serving as a reviewer for journals and conferences, including: 
     <ul>
+      <p><li>International Conference on Machine Learning (ICML)</li></p>
+      <p><li>Conference on Neural Information Processing Systems (NeurIPS)</li></p>
       <p><li> International Conference on Learning Representations (ICLR).</li></p>
       <p><li> IEEE Transactions on Neural Networks and Learning Systems (TNNLS).</li></p>
       <p><li> Neural Networks (NN).</li></p>
@@ -237,7 +239,7 @@
   <!-- The More Section -->
   <div class="w3-container w3-padding-32" id="more">
     <h2>Contact</h2>
-    <p><li> Email: Longkang.Li@mbzuai.ac.ae </li></p>
+    <p><li> Email: loka.li@mbzuai.ac.ae </li></p>
     <p><li> Location: Room 11, ML Department, 2nd Floor, 1B Block, MBZUAI, Abu Dhabi, UAE.</li></p>
     
     <br>
