--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
   <!-- The More Section -->
   <div class="w3-container w3-padding-32" id="more">
     <h2>Contact</h2>
-    <p><li> Email: loka.li@mbzuai.ac.ae </li></p>
+    <p><li> Email: Longkang.Li@mbzuai.ac.ae </li></p>
     <p><li> Location: Room 11, ML Department, 2nd Floor, 1B Block, MBZUAI, Abu Dhabi, UAE.</li></p>
     
     <br>
