--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   <div class="w3-container w3-padding-32" id="more">
     <h2>Contact</h2>
     <p><li> Email: Longkang.Li@mbzuai.ac.ae </li></p>
-    <p><li> Location: Room 11, ML Department, 2nd Floor, 1B Block, MBZUAI, Abu Dhabi, UAE.</li></p>
+    <p><li> Location: ML Department, 2nd Floor, 1B Block, MBZUAI, Abu Dhabi, UAE.</li></p>
     
     <br>
     <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=269&t=tt&d=WqNAECGeOap9rapsFKcIAmtV22D4reDnZzctz9NQrVQ&co=81bdd6&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
