update in Sep 2024

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <a href="#home" class="w3-bar-item w3-button">Home</a>
     <a href="#news" class="w3-bar-item w3-button">News</a>
     <a href="#publications" class="w3-bar-item w3-button">Research</a>
-    <a href="#service" class="w3-bar-item w3-button">Services</a>
+    <a href="#service" class="w3-bar-item w3-button">Service</a>
     <a href="#education" class="w3-bar-item w3-button">Education</a>
     <a href="#experience" class="w3-bar-item w3-button">Experience</a>
     <!-- <a href="#talks" class="w3-bar-item w3-button">Teaching</a> -->
@@ -71,7 +71,7 @@
       <img style="width: 80%;max-width: 400px" alt="profile photo" src="imgs/loka3.jpg"> 
       <h3><b>Loka Li</b></h3>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          Hello, World! I am a second-year Ph.D. student in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), where I am fortunate to be advised by Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/">Kun Zhang</a>. I am a member of the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>), led by MBZUAI president Prof. Eric Xing and center director Prof. Kun Zhang. My research interest lies at the intersection of machine learning and causality.
+          Hello, World! I am a third-year Ph.D. student in machine learning at Mohamed bin Zayed University of Artificial Intelligence (<a href="https://mbzuai.ac.ae/">MBZUAI</a>), where I am fortunate to be advised by Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/">Kun Zhang</a>. I am a member of the Center for Integrative Artificial Intelligence (<a href="https://ciai.site/">CIAI</a>), led by MBZUAI president Prof. Eric Xing and center director Prof. Kun Zhang. I'm interested in causality and machine learning, with a particular focus on healthcare applications.
         </p>
         <p class="w3-center">
           <a style="color:#e77007" href="https://scholar.google.com/citations?user=PT5AMzgAAAAJ&hl=zh-CN"><strong>Google Scholar</strong></a> &nbsp|&nbsp
@@ -86,7 +86,7 @@
 <!-- The News Section -->
 <div class="w3-container w3-light-grey w3-padding-32" id="news">
   <h2>News</h2>
-    <!-- <p><li> Feb.2024: One paper about LLM self-correction is available at arXiv!</li></p> -->
+    <p><li> Sep.2024: One paper about casual discovery with determinism was accepted by NeurIPS 2024!</li></p>
     <p><li> Jan.2024: One paper about federated causal discovery was accepted by ICLR 2024!</li></p>
     <p><li> Dec.2023: One paper about imitation learning was accepted by AAAI 2024!</li></p>
 
@@ -96,6 +96,7 @@
  <!-- The Publications Section -->
   <div class="w3-container w3-padding-32"" id="publications">
     <h2>Research</h2>
+    <p>* Equal contribution.</p>
       <!-- <p class="w3-left-align" style="line-height:200%">
         Currently, I am interested in machine learning from <strong>causal</strong> perspective, especially in causal discovery and causal representation learning. On the foundation side, I am curious about how to bridge causality and machine learning. On the application side, I am wondering how to apply causality to computer vision and medical science.  
       </p> -->
@@ -122,9 +123,9 @@
       <p>
       <li> <a href="https://openreview.net/forum?id=jE6VXUhxq9">On Causal Discovery in the Presence of Deterministic Relations</a>
       <br>
-      <strong>Loka Li</strong>, Hanin Al Ghothani, Biwei Huang, Guangyi Chen, Jiji Zhang, Shahar Harel, Kun Zhang.
-      <br>
-      <em>Preprint.</em> 
+      <strong>Loka Li*</strong>, Haoyue Dai*, Hanin Al Ghothani, Biwei Huang, Jiji Zhang, Shahar Harel, Isaac Bentwich, Guangyi Chen, Kun Zhang.
+      <br> 
+      <em>Annual Conference on Neural Information Processing Systems (NeurIPS), 2024.</em> 
       </p>
 
       <p>
@@ -140,7 +141,7 @@
         <br>
         <strong>Loka Li</strong>, Siyuan Liang, Zihao Zhu, Chris Ding, Hongyuan Zha, Baoyuan Wu.
         <br>
-        <em>AAAI Conference on Artificial Intelligence (AAAI), 2024.</em> 
+        <em>Annual AAAI Conference on Artificial Intelligence (AAAI), 2024.</em> 
       </p>
      
       <!-- <p>
@@ -189,18 +190,19 @@
 
   <!-- The Service Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="service"> 
-    <h2>Services</h2>
+    <h2>Service</h2>
     - Serving as a reviewer for journals and conferences, including: 
     <ul>
       <p><li>International Conference on Machine Learning (ICML)</li></p>
       <p><li>Conference on Neural Information Processing Systems (NeurIPS)</li></p>
       <p><li> International Conference on Learning Representations (ICLR).</li></p>
       <p><li> IEEE Transactions on Neural Networks and Learning Systems (TNNLS).</li></p>
-      <p><li> Neural Networks (NN).</li></p>
+      <!-- <p><li> Neural Networks (NN).</li></p> -->
     </ul>
 
     - Serving as a teaching assistant for the courses, including:
     <ul>
+      <p><li> 2024/2025 Fall: ML801-Foundations and Advanced Topics in Machine Learning. (Instructor: Prof. Tongliang Liu.)</li></p>
       <p><li> 2023/2024 Spring: ML802-Advanced Machine Learning. (Instructor: Prof. Tongliang Liu.)</li></p>
       <p><li> 2023/2024 Fall: ML803-Advanced Probabilistic and Statistical Inference. (Instructor: Prof. Kun Zhang.)</li></p>
     </ul>
