--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
  <!-- The Publications Section -->
   <div class="w3-container w3-padding-32"" id="publications">
     <h2>Research</h2>
-    <p>* Equal contribution.</p>
+    <p>* Equal contributions.</p>
       <!-- <p class="w3-left-align" style="line-height:200%">
         Currently, I am interested in machine learning from <strong>causal</strong> perspective, especially in causal discovery and causal representation learning. On the foundation side, I am curious about how to bridge causality and machine learning. On the application side, I am wondering how to apply causality to computer vision and medical science.  
       </p> -->
