--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <!-- The News Section -->
 <div class="w3-container w3-light-grey w3-padding-32" id="news">
   <h2>News</h2>
-    <p><li> Sep.2024: One paper about casual discovery with determinism was accepted by NeurIPS 2024!</li></p>
+    <p><li> Sep.2024: One paper about deterministic casual discovery was accepted by NeurIPS 2024!</li></p>
     <p><li> Jan.2024: One paper about federated causal discovery was accepted by ICLR 2024!</li></p>
     <p><li> Dec.2023: One paper about imitation learning was accepted by AAAI 2024!</li></p>
 
